test_objc/compilable/objc_interface.d

extern (Obj-C)
interface A {
	void oneTwo(int a, int b) pure [one:two:];
	void test(int a, int b, int c) [test:::];
}
