test_objc/fail_compilation/objc_interface2.d

extern (Obj-C)
interface A {
	void test(int a, int b, int c) [test:]; // non-matching number of colon
}
